--- a/apa-proj2.cabal
+++ b/apa-proj2.cabal
@@ -53,6 +53,7 @@ Executable parse
   -- Packages needed in order to build this package.
   Build-depends:       base,
                        uu-parsinglib,
+                       cco,
                        haskell98
   
   -- Modules not exported by this package.
