--- a/apa-proj2.cabal
+++ b/apa-proj2.cabal
@@ -14,20 +14,7 @@ build-type:            Simple
 cabal-version:         >= 1.6
 
 executable parse-hm
-  main-is:             ParseHM.hs
+  main-is:             Main.hs
   build-depends:       base, cco >= 0.0.4
-  other-modules:       CCO.HM, CCO.HM.AG, CCO.HM.Base, CCO.HM.Lexer,
-                       CCO.HM.Parser
-  hs-source-dirs:      src
-
-executable pp-systemf
-  main-is:             PpSystemF.hs
-  build-depends:       base, cco >= 0.0.4
-  other-modules:       CCO.SystemF, CCO.SystemF.AG, CCO.SystemF.Base
-  hs-source-dirs:      src
-
-executable hm2systemf
-  main-is:             HM2SystemF.hs
-  build-depends:       base, cco >= 0.0.4, uuagc
-  other-modules:       CCO.HM2SystemF, CCO.HM.AG, CCO.HM.Base, CCO.Types
+  other-modules:       CCO.HM, CCO.HM.AG, CCO.HM.Lexer, CCO.HM.Parser
   hs-source-dirs:      src
