--- a/apa-proj2.cabal
+++ b/apa-proj2.cabal
@@ -13,8 +13,8 @@ tested-with:           GHC == 6.8.2, GHC == 6.8.3, GHC == 6.10.1
 build-type:            Simple
 cabal-version:         >= 1.6
 
-executable parse-hm
+executable cfa
   main-is:             Main.hs
-  build-depends:       base, cco >= 0.0.4, containers >= 0.4
-  other-modules:       APA2.HM, APA2.AG, APA2.Lexer, APA2.Parser
+  build-depends:       base, cco >= 0.0.4, containers >= 0.4, haskell-src-exts
+  other-modules:       APA2.HM, APA2.AG
   hs-source-dirs:      src
