--- a/apa-proj2.cabal
+++ b/apa-proj2.cabal
@@ -15,5 +15,5 @@ cabal-version:         >= 1.6
 
 executable cfa
   main-is:             Main.hs
-  build-depends:       base, cco >= 0.0.4, containers >= 0.4, haskell-src-exts
+  build-depends:       base, cco >= 0.0.4, containers >= 0.4, syb >= 0.3, haskell-src-exts
   hs-source-dirs:      src
