--- a/apa-proj2.cabal
+++ b/apa-proj2.cabal
@@ -15,6 +15,6 @@ cabal-version:         >= 1.6
 
 executable cfa
   main-is:             Main.hs
-  build-depends:       base, containers >= 0.4, syb >= 0.3, haskell-src-exts
+  build-depends:       base, containers >= 0.4, syb >= 0.3, haskell-src-exts, multiset >= 0.2.1
   hs-source-dirs:      src
   Ghc-Options:         -Wall -fwarn-tabs
